apps/architecture-portal/versioned_docs/version-1.0.16.0/hosts/creator-web.mdx
---
title: Creator Web Host
area: hosts
status: implemented
host: creator-web
owners: [product, hosts, web]
source_paths:
  - apps/creator-web
  - apps/creator-web/module.json
  - packages/web-runtime-platform
  - products/lmdj/assembly.json
  - scripts/creator-web.sh
  - tests/platform/web/creator
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {StatusBadge} from '@site/src/components/StatusBadge';

<BuildIdentity />

## 状态

<StatusBadge status="implemented" /> Creator Web Host `1.0.0` 已进入 Product Build `1.0.16.0` Assembly。它只依赖共享 Web Runtime Platform `0.1.0`，不直接依赖或绕过 Application Facade。

## 创作边界

当前 UI 提供 browser-local Project create/open、portable Project Bundle import/export、64 个稳定 Pad Slot、WAV 分配、四个 Bank、Project inspect 与 Runtime diagnostics。Host 不解析 Bundle；导入字节流交给 Facade，Project Truth 与 publication 仍由 Core 决定。

## 演奏边界

Creator 使用共享 Runtime Session 进入同一 Wasm Core、OPFS 与 AudioWorklet 路径。Pointer、Keyboard 与 MIDI 使用统一输入 adapter；未完成的物理设备/延迟验收不会被 UI 可用性或 Playwright 结果替代。

## 分发与身份

`scripts/creator-web.sh package` 生成内容哈希资产和 canonical Creator distribution manifest；manifest 绑定 Product Build、Host、Platform、协议、固定 Emscripten 身份、heap 与资源上限，并显式声明兼容的诊断 Host 身份。共享 native manifest gate 只接受 Product Assembly 注入的精确 Host/contract/version 组合。该同构建 manifest ownership 协议不是公开跨版本 Contract。

## 自动化证据

Node/Vitest 覆盖 UI 状态、导入、Runtime Session 与报告；Python 覆盖 deterministic/atomic package 和 secure server；Playwright 覆盖 packaged Chromium 创作旅程及 WebKit capability boundary。完整 clean-source packaged Proof 在当前源码提交后运行并单独记录。

## 非能力

当前不宣称离线安装/PWA、云同步、协作、素材智能、Sequence 编辑、生产部署、`beta`/`stable` 或物理设备体验已完成。
